add publishd flags

--- a/_posts/2013-04-11-arduino-101.markdown
+++ b/_posts/2013-04-11-arduino-101.markdown
@@ -5,6 +5,7 @@ date: 2013-04-11 09:39:02+00:00
 layout: post
 slug: arduino-101
 title: Arduino 101
+published: true
 wordpress_id: 280
 categories:
 - code
