--- a/_posts/2017-07-05-testmath.markdown
+++ b/_posts/2017-07-05-testmath.markdown
@@ -12,7 +12,7 @@ testing inline math $$\dot x = (J-R) \nabla H(x) + G(x) u$$
 
 and display math
 $$
-\beging{equation}
+\begin{equation}
 	\dot x = (J-R) \nabla H(x) + G(x) u
 \end{equation}
 $$
