--- a/_posts/2017-02-11-rotary.markdown
+++ b/_posts/2017-02-11-rotary.markdown
@@ -8,6 +8,8 @@ categories:
 - science
 ---
 
+![Delay]({{ site.url }}/images/rotary/DelayLR_17.5_20cm_squared.png){:width="300"}
+
 While working on [Rotary](https://www.uvi.net/rotary.html), I had to the time to perform extensive measures and analysis on real rotary speakers. The usual ones like the Horn and Drum frequency and polar responses, the Doppler effect and some more unusual ones. Here's some findings that I found interresting.
 
 
