--- a/_posts/2017-02-11-rotary.markdown
+++ b/_posts/2017-02-11-rotary.markdown
@@ -17,7 +17,7 @@ If we use several microphones around a moving acoustic source, by analysing the 
 
 In the case of a speaker rotating about a fixed center, if we setup 2 microphones at a 90° angle around the source, and plot the trajectory in the the $$(D_L, D_R)$$ plane, if the source was truely a point-source, we should see a circle trajectory because of the invariant $$D_L^2 + D_R^2 = R^2$$ where $$D_L,D_R$$ are respectively the distances of the speaker to the left and right microphones and $$R$$ is the radius of the rotating speaker.
 
-We did that and here's the result we got for a rotary speaker horn
+We did that and here's the result we have for a rotary speaker horn
 
 ![Delay]({{ site.url }}/images/rotary/DelayLR_17.5_20cm_squared.png){:width="640"}
 
@@ -36,7 +36,7 @@ Indeed, the geometry of the Drum is closer to an open cube rotating about its ax
 
 Another interresting aspect of these rotating speakers is that acceleration/deceleration curves are not symmetric because of the rotor inertia. Direct measurement was difficult to setup, so I decided to extract these from the signal amplitude and frequency modulation. My first attempt was using heterodyne demodulation and analysis similar to pitch-tracking to recover the rotating speed. However having very few information per revolution tn infer an acceleration curve makes the task quite difficult when the goal is to recover a continuouas acceleration curve. So I decided to move to a Bayesian estimation framework using Hidden Markov Models to add as much of a priori knowledge as I could.
 
-Here is the raw speed observation probabilities I got after the feature analysis step:
+Here is the raw speed observation probabilities I have after the feature analysis step:
 
 ![HMMObs]({{ site.url }}/images/rotary/acc_decc_horn_speed_spectrogram.png){:width="640"}
 
