--- a/_posts/2011-10-05-l-study.markdown
+++ b/_posts/2011-10-05-l-study.markdown
@@ -14,4 +14,4 @@ tags:
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F24290037"></iframe>
 
-a generative music piece made with MachFive3 Fazioli Piano and MachFiveScript.
+a generative music piece made with MachFive3 Fazioli Piano and [UVIScript](http://www.uvi.net/uviscript/).
